--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,6 +25,8 @@ body {
   font-size: 18px;
   height: 100%;
   line-height: 1.1;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
@@ -49,7 +51,6 @@ main {
   grid-template-rows: repeat(2, max-content) auto;
   margin: 0 auto;
   overflow: auto;
-  padding: 5% 0;
   width: 100%;
 }
 
